--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ body {
 	min-height: 568px;
 }
 .slide-1 {
-	background: #B4D1E0 url(../img/Image-1.png) no-repeat top right;
+	background: #B4D1E0 url(../img/image-1.png) no-repeat top right;
 }
 .slide-2 {
 	background: #48e483 url(../img/card-image-3.png) no-repeat top right 12%;
